fix amp overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -198,6 +198,7 @@ table td {
   -ms-grid-row-span: 2;
   grid-row: 1 / span 2;
   grid-column-end: -1;
+  overflow: hidden;
 }
 
 .big-info {
